# saocarlos-tech-jobs-aggregator

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/cezcomrh/: 2026-01-09.json
data/raw/prefeitura/: 2026-01-09.json
docs/: contributing.md  sources.md
scripts/: README.md
scripts/cezcomrh/: fetch_vagas_json.py  scrape_vaga_detail.py
scripts/prefeitura/: scrape_prefeitura_pdf.py
